assets/product.css
html, body, div, span, applet, object, iframe,
h1, h2, h3, h4, h5, h6, p, blockquote, pre,
a, abbr, acronym, address, big, cite, code,
del, dfn, em, img, ins, kbd, q, s, samp,
small, strike, strong, sub, sup, tt, var,
b, u, i, center,
dl, dt, dd, ol, ul, li,
fieldset, form, label, legend,
table, caption, tbody, tfoot, thead, tr, th, td,
article, aside, canvas, details, embed,  
figure, figcaption, footer, header, hgroup, 
menu, nav, output, ruby, section, summary,
time, mark, audio, video {
	margin: 0;
	padding: 0; 
	border: 0;
	font-size: 100%;
	font: inherit;
	vertical-align: baseline;
  	text-transform:unset;
  	letter-spacing:unset;
}
*, ::after, ::before{
  box-sizing:unset;
}
.disclosure__toggle:focus, input:focus, select:focus, textarea:focus{
  border-color:unset;
}
button{
  font:-webkit-control;
}
/* HTML5 display-role reset for older browsers */
article, aside, details, figcaption, figure, 
footer, header, hgroup, menu, nav, section {
	display: block;
}
body {
	line-height: 1;
  	font-family: 'Open Sans', sans-serif;
}
ol, ul {
	list-style: none;
}
blockquote, q {
	quotes: none;
}
blockquote:before, blockquote:after,
q:before, q:after {
	content: '';
	content: none;
}
table {
	border-collapse: collapse;
	border-spacing: 0;
}
.notDescTop{
	margin-bottom:10px;
}

@font-face {
  font-family: star;
  src: url(star.eot);
  src: url(star.eot?#iefix) format("embedded-opentype"), url(star.woff) format("woff"), url(star.ttf) format("truetype"), url(star.svg#star) format("svg");
  font-weight: 400;
  font-style: normal;
  font-display: swap;
}

@font-face {
  font-family: 'RobotoCondensed';
  src: url("Robotocondensedbold.woff2") format("woff2"), url("Robotocondensedbold.woff") format("woff");
  font-weight: bold;
  font-style: normal;
  font-display: swap;
}
@media screen and (min-width: 1001px) {
  .notDescTop {
    display: none;
  }
}

@media screen and (max-width: 1000px) {
  .onlyDescTop {
    display: none;
  }
}

.product {
  padding: 0;
  font-family: 'Open Sans', sans-serif;
}

.product__container {
  display: -ms-grid;
  display: grid;
  -ms-grid-columns: 40.5% 59.5%;
      grid-template-columns: 40.5% 59.5%;
}

@media screen and (max-width: 690px) {
  .product__container {
    max-width: 85%;
  }
}

.product__galery {
  margin-right: 2%;
  align-self: start;
}

@media screen and (max-width: 1000px) {
  .product__galery {
    -ms-grid-row: 1;
    grid-area: 1/ span 2;
    margin-right: 0;
  }
}

.product__galery__bigImage {
  -webkit-transition: all .2s ease-in-out;
  transition: all .2s ease-in-out;
}

.product__galery__bigImage_image {
  -webkit-transition: all .2s ease-in-out;
  transition: all .2s ease-in-out;
}

.product__galery__smallImages {
  display: -ms-grid;
  display: grid;
  -ms-grid-columns: (1fr)[4];
      grid-template-columns: repeat(4, 1fr);
}

@media screen and (max-width: 1000px) {
  .product__galery__smallImages {
    -ms-grid-columns: (1fr)[6];
        grid-template-columns: repeat(6, 1fr);
  }
}

.product__galery__smallImages_image {
  max-width: 126px;
  width: 100%;
  cursor: pointer;
  opacity: .5;
}

.product__galery__smallImages_image.active {
  opacity: 1;
}

@media screen and (min-width: 768px) and (max-width: 1000px) {
  .product__galery__bigImage {
    width: 80%;
    margin: 0 auto;
  }
}

@media screen and (max-width: 768px) {
  .product__galery__smallImages {
    display: flex;
    flex-wrap: nowrap;
    overflow-x: auto;
    -webkit-overflow-scrolling: touch;
    justify-content: safe center;
    scrollbar-width: none;
  }
  .product__galery__smallImages::-webkit-scrollbar {
    display: none;
  }
  .product__galery__smallImages_image {
    flex: 0 0 74px;
    width: 74px;
    height: 74px;
    object-fit: cover;
  }
}

@media (max-width: 1024px) {
  #shopify-section-product-recommendations .related__products {
    display: block;
    overflow: hidden;
    margin-top: 0;
    padding-top: 0;
  }
  #shopify-section-product-recommendations .swiper-wrapper {
    display: flex;
    align-items: flex-start;
  }
  #shopify-section-product-recommendations .related__product {
    flex-shrink: 0;
    padding-top: 0;
    box-sizing: border-box;
  }
  #shopify-section-product-recommendations .related__product__img--active {
    height: 160px;
    overflow: hidden;
  }
  #shopify-section-product-recommendations .related__product__img--active img {
    max-width: 100%;
    max-height: 100%;
    object-fit: contain;
  }
  #shopify-section-product-recommendations .related__product__img {
    margin-left: 0;
    margin-right: 0;
    max-width: 100%;
  }
  #shopify-section-product-recommendations .related__product__title {
    font-size: 11.5px;
    line-height: 16px;
    white-space: normal;
    word-wrap: break-word;
    overflow-wrap: break-word;
  }
  #shopify-section-product-recommendations .related__product__price {
    font-size: 10px;
    line-height: 12px;
    white-space: nowrap;
  }
}

.product__info {
  display: -ms-grid;
  display: grid;
  -ms-grid-columns: 44% 10% 27%;
      grid-template-columns: 44% 10% 27%;
      -ms-grid-rows: 40px .1fr .1fr .1fr 200px .1fr .1fr .1fr 3fr;
      grid-template-rows: 40px .1fr .1fr .1fr 200px .1fr .1fr .1fr 2fr;
  -webkit-column-gap: calc(10px);
          column-gap: calc(10px);
  padding-left: 30px;
}
.product__info--button{
  display: flex;
  flex-direction: column;
  justify-content: center;
  align-items: center;
  position: relative;
  cursor: pointer;
  background: #fff;
  max-width: 165px;
  width: 100%;

  margin:7.5px 5px;    
  border-width: 1px;
  border-color: rgb(201, 221, 255);
  border-style: solid;
  border-radius: 4px;
  background-color: rgb(255, 255, 255);
  box-shadow: 0px 2px 7px 0px rgba(0, 0, 0, 0.08);
  font-size: 24px;
  color: #000;
  font-weight: 400;
  padding: 35px 0 20px;
  line-height: 1.5;
  max-height: 153px;
  transition: all .75s ease;      
}
.cream_prod .product__info--button{
  max-height: 153px;
}
/* ... */

